src/Base/main/default/objects/Migrations_Products__c/fields/Default_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Default_Vendor__c</fullName>
    <label>Default Vendor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>