src/Base/main/default/objects/Migrations_Products__c/fields/IEM__c.field-meta.xml
<CustomField>
    <fullName>IEM__c</fullName>
    <label>IEM</label>
    <length>50</length>
    <type>Text</type>
</CustomField>