src/Base/main/default/objects/Migrations_Products__c/fields/Inbound_Inventory_Movement__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Inventory_Movement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inbound Inventory Movement</label>
    <referenceTo>AcctSeedERP__Inbound_Inventory_Movement__c</referenceTo>
    <relationshipLabel>Migrations Products</relationshipLabel>
    <relationshipName>Migrations_Products</relationshipName>
    <type>Lookup</type>
</CustomField>