src/Base/main/default/objects/Migrations_Products__c/fields/Inventory_Balance__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Balance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Balance</label>
    <referenceTo>AcctSeedERP__Inventory_Balance__c</referenceTo>
    <relationshipLabel>Migrations Products</relationshipLabel>
    <relationshipName>Migrations_Products</relationshipName>
    <type>Lookup</type>
</CustomField>