src/Base/main/default/objects/Migrations_Products__c/fields/Lot_Tracked__c.field-meta.xml
<CustomField>
    <fullName>Lot_Tracked__c</fullName>
    <formula>Product__r.GMBLASERP__Lot_Tracked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lot Tracked</label>
    <type>Checkbox</type>
</CustomField>