src/Base/main/default/objects/Migrations_Products__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>IEM__c</columns>
    <columns>Product__c</columns>
    <columns>Default_Vendor__c</columns>
    <columns>Description__c</columns>
    <columns>Inventory__c</columns>
    <columns>UOM__c</columns>
    <columns>Inventory_Balance__c</columns>
    <columns>Inbound_Inventory_Movement__c</columns>
    <columns>Lot_Tracked__c</columns>
    <columns>Serialized__c</columns>
    <columns>Inventory_Product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>